<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="start">START</string>
    <string name="image">START IMAGE</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_name">EXERCISE NAME</string>
    <string name="upcoming_next">UPCOMING EXERCISE</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="this_will_stop_your_workout">This will stop your workout. You have come this far, are you sure you want to quit?</string>
    <string name="no">No</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="history">History</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
</resources>